# btanks

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  Doxyfile  EXCEPTION  Makefile  README-editor.txt  README-en.txt  README-fr.txt  README-linux.txt  README-ru.txt  SConscript  SConstruct  about_us.txt  bt.xml  donate.url  hash_map.patch  homepage.url  make-dist.sh  pack-resources.sh  project_page.url  show-lost-cmaps.sh  video.txt
SDL_collide/: README  SDL_collide.c  SDL_collide.h
SDL_gfx/: SConscript  SDL_framerate.h  SDL_gfxPrimitives.c  SDL_gfxPrimitives.h  SDL_imageFilter.c  SDL_imageFilter.h  SDL_rotoZoom.c  SDL_rotoZoom.h  SDL_rotozoom.c
ai/: SConscript  base.cpp  base.h  buratino.cpp  buratino.h  herd.cpp  herd.h  old_school.cpp  old_school.h  rush.cpp  rush.h  traits.cpp  traits.h  trooper.cpp  trooper.h  waypoints.cpp  waypoints.h
clunk/: SConscript  buffer.cpp  buffer.h  clunk.h  context.cpp  context.h  distance_model.cpp  distance_model.h  export_clunk.h  kemar.h  locker.h  object.cpp  object.h  sample.cpp  sample.h  sdl_ex.cpp  sdl_ex.h  source.cpp  source.h  stream.cpp  stream.h  test.cpp  v3.h
controls/: control_method.h  default_keys.cpp  external_control.cpp  external_control.h  joy_bindings.cpp  joy_bindings.h  joyplayer.cpp  joyplayer.h  keyplayer.cpp  keyplayer.h  mouse_control.cpp  mouse_control.h
data/: editor.xml  playlist  preload.xml  resources.xml  strings.xml
debian/: changelog  control  rules
editor/: CMakeLists.txt  SConscript  SDL_win32_main.c  add_object_dialog.cpp  add_object_dialog.h  add_tileset_dialog.cpp  add_tileset_dialog.h  base_brush.cpp  base_brush.h  command.cpp  command.h  editor.cpp  editor.h  layer_item.cpp  layer_item.h  layer_list_dialog.cpp  layer_list_dialog.h  layer_properties.cpp  layer_properties.h  morph_dialog.cpp  morph_dialog.h  object_properties.cpp  object_properties.h  open_map_dialog.cpp  open_map_dialog.h  resize_dialog.cpp  resize_dialog.h  tilebox_brush.cpp  tilebox_brush.h  tileset_dialog.cpp  tileset_dialog.h
engine/: CMakeLists.txt  SConscript
engine/ai/: base.cpp  base.h  buratino.cpp  buratino.h  herd.cpp  herd.h  old_school.cpp  old_school.h  rush.cpp  rush.h  synchronizable.h  targets.cpp  targets.h  traits.cpp  traits.h  trooper.cpp  trooper.h  waypoints.cpp  waypoints.h
engine/controls/: control_method.cpp  control_method.h  external_control.cpp  external_control.h  joy_bindings.cpp  joy_bindings.h  joyplayer.cpp  joyplayer.h  keyplayer.cpp  keyplayer.h  mouse_control.cpp  mouse_control.h  simple_joy_bindings.cpp  simple_joy_bindings.h
engine/luaxx/: lua_hooks.cpp  lua_hooks.h  state.cpp  state.h
engine/menu/: base_menu.cpp  base_menu.h  box.cpp  box.h  button.cpp  button.h  campaign_menu.cpp  campaign_menu.h  chat.cpp  chat.h  checkbox.cpp  checkbox.h  chooser.cpp  chooser.h  container.cpp  container.h  control.cpp  control.h  control_picker.cpp  control_picker.h  gamepad_setup.cpp  gamepad_setup.h  grid.cpp  grid.h  host_item.cpp  host_item.h  host_list.cpp  host_list.h  image.cpp  image.h  image_view.cpp  image_view.h  join_server_menu.cpp  join_server_menu.h  join_team.cpp  join_team.h  label.cpp  label.h  main_menu.cpp  main_menu.h  (+63 more)
engine/net/: client.cpp  client.h  connection.cpp  connection.h  message.cpp  message.h  monitor.cpp  monitor.h  scanner.cpp  scanner.h  server.cpp  server.h
engine/sl08/: sl08.cpp  sl08.h  sl08.py
engine/sound/: mixer.cpp  mixer.h  ogg_ex.cpp  ogg_ex.h  ogg_stream.cpp  ogg_stream.h  sample.cpp  sample.h
engine/sound/openal/: al_ex.cpp  mixer.h  sample.h
engine/src/: alarm.cpp  alarm.h  animation_model.cpp  animation_model.h  base_object.cpp  base_object.h  campaign.cpp  campaign.h  cheater.cpp  cheater.h  config.cpp  config.h  console.cpp  console.h  credits.cpp  credits.h  export_btanks.h  finder.cpp  finder.h  game.cpp  game.h  game_monitor.cpp  game_monitor.h  game_type.h  hud.cpp  hud.h  i18n.cpp  i18n.h  logo.cpp  logo.h  main.cpp  netstats.cpp  netstats.h  nickname.cpp  notifying_xml_parser.cpp  notifying_xml_parser.h  object.cpp  object.h  object_common.h  object_grid.cpp  (+39 more)
engine/tmx/: generator.cpp  generator.h  generator_object.cpp  layer.cpp  layer.h  map.cpp  map.h  tileset.cpp  tileset.h  tileset_list.cpp
fann/: SConscript  exception.cpp  exception.h  network.cpp  network.h
luaxx/: lua_hooks.cpp  lua_hooks.h  state.cpp  state.h
math/: abs.h  binary.h  elastic_bset.h  graph.h  matrix.h  minmax.h  quad_tree.h  range_list.h  unary.h  v2.h  v3.h  vector.h
menu/: SConscript  base_menu.cpp  base_menu.h  box.cpp  box.h  button.cpp  button.h  campaign.cpp  campaign.h  campaign_menu.cpp  campaign_menu.h  chat.cpp  chat.h  checkbox.cpp  checkbox.h  chooser.cpp  chooser.h  container.cpp  container.h  control.cpp  control.h  control_picker.cpp  (+64 more)
mrt/: CMakeLists.txt  SConscript  b64.cpp  b64.h  base_directory.cpp  base_directory.h  base_file.cpp  base_file.h  calendar.cpp  calendar.h  chunk.cpp  chunk.h  crash.cpp  crash.h  dict_serializator.cpp  dict_serializator.h  directory.cpp  directory.h  exception.cpp  exception.h  export.h  export_base.h  export_mrt.h  file.cpp  file.h  fmt.cpp  fmt.h  fs_node.cpp  fs_node.h  gzip.cpp  gzip.h  hash_compat.h  ioexception.cpp  ioexception.h  lang.cpp  lang.h  locale.cpp  locale.h  logger.cpp  logger.h  (+33 more)
sdlx/: CMakeLists.txt  SConscript  SDL_main.h  SDL_win32_main.c  c_map.cpp  c_map.h  c_test.cpp  color.cpp  color.h  cursor.cpp  cursor.h  export.h  export_sdlx.h  file_rw.cpp  file_rw.h  font.cpp  font.h  fps.cpp  fps.h  joystick.cpp  joystick.h  module.cpp  module.h  mutex.cpp  mutex.h  net_ex.cpp  net_ex.h  rect.h  renderer.h  sdl_ex.cpp  sdl_ex.h  sdlx.h  semaphore.cpp  semaphore.h  socket_set.cpp  socket_set.h  surface.cpp  surface.h  system.cpp  system.h  (+10 more)
sdlx/gfx/: SDL_rotozoom.c  SDL_rotozoom.h
sdlx/glSDL/: README  d3dsdl.cpp  d3dsdl.h  glSDL-0.6.c  glSDL-0.6.h  glSDL-0.7.h  glSDL-0.8.h  glSDL.c  glSDL.c-0.6  glSDL.h  parallax4.c  parallax4.h
sdlx/net/: net_ex.cpp  net_ex.h  socket_set.cpp  socket_set.h  tcp_socket.cpp  tcp_socket.h
sdlx/wrappers/: d3dsdl.cpp  d3dsdl8.cpp  glSDL.h
(+427 files in other folders)
